log/build_2024-04-28_21-34-23/my_docking/stderr.log
  File "/home/kong/my_ws/install/my_docking/lib/python3.10/site-packages/my_docking/docking.py", line 105
    if(self.again == Tif angular_z > self.max_angular_z:
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

